Use new finalizer interface instead of deprecated one. Requires Java >= 9, which may be an issue for some projets...